--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Docsify Starter Kit by Alok Prateek</title>
+  <title>expedite-core-docs</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -24,7 +24,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Docsify Starter Kit',
+      name: 'expedite-core-docs',
       coverpage: true,
       onlyCover: true,
       loadSidebar: true,
@@ -33,7 +33,6 @@
       subMaxLevel: 4,
       auto2top: true,
       executeScript: true,
-      logo: '/_media/logo.png',
       notFoundPage: true,
       ga: 'UA-xxxxxxxxx-1',
       plugins: [
